force-app/main/default/objects/Promotion_Product__c/Promotion_Product__c.object-meta.xml
<CustomObject>
    <label>Promotion Product</label>
    <nameField>
        <displayFormat>PP-{000000}</displayFormat>
        <label>Promotion Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promotion Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>