force-app/main/default/objects/Promotion_Product__c/fields/From__c.field-meta.xml
<CustomField>
    <fullName>From__c</fullName>
    <formula>Promotion_Item__r.Valid_from__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>From</label>
    <type>Date</type>
</CustomField>