force-app/main/default/objects/Promotion_Product__c/fields/Is_Show_Sumary__c.field-meta.xml
<CustomField>
    <fullName>Is_Show_Sumary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Show Sumary</label>
    <type>Checkbox</type>
</CustomField>