force-app/main/default/objects/Promotion_Product__c/fields/Promotion_Desc__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Desc__c</fullName>
    <label>Promotion Desc</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>