force-app/main/default/objects/Promotion_Product__c/fields/Promotion_Item__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Item__c</fullName>
    <label>Promotion Item</label>
    <referenceTo>Promotion_Item__c</referenceTo>
    <relationshipName>Promotion_Productts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>