force-app/main/default/objects/Promotion_Product__c/fields/To__c.field-meta.xml
<CustomField>
    <fullName>To__c</fullName>
    <formula>Promotion_Item__r.Valid_to__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>To</label>
    <type>Date</type>
</CustomField>